--- a/window/MateWin.ui
+++ b/window/MateWin.ui
@@ -15,7 +15,7 @@
   </property>
   <property name="windowIcon">
    <iconset>
-    <normaloff>icon/win1.png</normaloff>icon/win1.png</iconset>
+    <normaloff>C:/Users/Administrator/.designer/backup/icon/win1.png</normaloff>C:/Users/Administrator/.designer/backup/icon/win1.png</iconset>
   </property>
   <widget class="QWidget" name="centralwidget"/>
   <widget class="QMenuBar" name="menubar">
@@ -27,8 +27,75 @@
      <height>21</height>
     </rect>
    </property>
+   <widget class="QMenu" name="menu">
+    <property name="title">
+     <string>文件</string>
+    </property>
+    <addaction name="stresstest"/>
+    <addaction name="actionExit"/>
+   </widget>
+   <widget class="QMenu" name="menu_2">
+    <property name="title">
+     <string>测试</string>
+    </property>
+    <addaction name="stresstest"/>
+   </widget>
+   <widget class="QMenu" name="menu_3">
+    <property name="title">
+     <string>分析</string>
+    </property>
+   </widget>
+   <widget class="QMenu" name="menu_4">
+    <property name="title">
+     <string>帮助</string>
+    </property>
+    <addaction name="version"/>
+   </widget>
+   <addaction name="menu"/>
+   <addaction name="menu_2"/>
+   <addaction name="menu_3"/>
+   <addaction name="menu_4"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
+  <widget class="QToolBar" name="toolBar">
+   <property name="windowTitle">
+    <string>toolBar</string>
+   </property>
+   <attribute name="toolBarArea">
+    <enum>TopToolBarArea</enum>
+   </attribute>
+   <attribute name="toolBarBreak">
+    <bool>false</bool>
+   </attribute>
+   <addaction name="stresstest"/>
+  </widget>
+  <action name="stresstest">
+   <property name="icon">
+    <iconset>
+     <normaloff>icon/strestest.png</normaloff>icon/strestest.png</iconset>
+   </property>
+   <property name="text">
+    <string>压力测试</string>
+   </property>
+  </action>
+  <action name="version">
+   <property name="icon">
+    <iconset>
+     <normaloff>icon/version.png</normaloff>icon/version.png</iconset>
+   </property>
+   <property name="text">
+    <string>软件版本</string>
+   </property>
+  </action>
+  <action name="actionExit">
+   <property name="icon">
+    <iconset>
+     <normaloff>icon/exit.png</normaloff>icon/exit.png</iconset>
+   </property>
+   <property name="text">
+    <string>退出</string>
+   </property>
+  </action>
  </widget>
  <resources/>
  <connections/>
