--- a/window/MateWin.ui
+++ b/window/MateWin.ui
@@ -17,7 +17,89 @@
    <iconset>
     <normaloff>C:/Users/Administrator/.designer/backup/icon/win1.png</normaloff>C:/Users/Administrator/.designer/backup/icon/win1.png</iconset>
   </property>
-  <widget class="QWidget" name="centralwidget"/>
+  <property name="toolButtonStyle">
+   <enum>Qt::ToolButtonTextOnly</enum>
+  </property>
+  <widget class="QWidget" name="centralwidget">
+   <widget class="QListView" name="funcion">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>10</y>
+      <width>221</width>
+      <height>491</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label">
+    <property name="geometry">
+     <rect>
+      <x>50</x>
+      <y>20</y>
+      <width>101</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>功能</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+   </widget>
+   <widget class="QDateTimeEdit" name="dateTimeEdit">
+    <property name="geometry">
+     <rect>
+      <x>600</x>
+      <y>0</y>
+      <width>194</width>
+      <height>22</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton_2">
+    <property name="geometry">
+     <rect>
+      <x>70</x>
+      <y>150</y>
+      <width>75</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>功能二</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton_1">
+    <property name="geometry">
+     <rect>
+      <x>70</x>
+      <y>90</y>
+      <width>75</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>功能一</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_show">
+    <property name="geometry">
+     <rect>
+      <x>330</x>
+      <y>60</y>
+      <width>261</width>
+      <height>51</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>print_show</string>
+    </property>
+    <property name="wordWrap">
+     <bool>true</bool>
+    </property>
+   </widget>
+  </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
@@ -72,7 +154,7 @@
   <action name="stresstest">
    <property name="icon">
     <iconset>
-     <normaloff>icon/strestest.png</normaloff>icon/strestest.png</iconset>
+     <normaloff>C:/Users/Administrator/.designer/backup/icon/压力测试.png</normaloff>C:/Users/Administrator/.designer/backup/icon/压力测试.png</iconset>
    </property>
    <property name="text">
     <string>压力测试</string>
@@ -81,7 +163,7 @@
   <action name="version">
    <property name="icon">
     <iconset>
-     <normaloff>icon/version.png</normaloff>icon/version.png</iconset>
+     <normaloff>C:/Users/Administrator/.designer/backup/icon/官方版本.png</normaloff>C:/Users/Administrator/.designer/backup/icon/官方版本.png</iconset>
    </property>
    <property name="text">
     <string>软件版本</string>
@@ -90,7 +172,7 @@
   <action name="actionExit">
    <property name="icon">
     <iconset>
-     <normaloff>icon/exit.png</normaloff>icon/exit.png</iconset>
+     <normaloff>C:/Users/Administrator/.designer/backup/icon/退出.png</normaloff>C:/Users/Administrator/.designer/backup/icon/退出.png</iconset>
    </property>
    <property name="text">
     <string>退出</string>
