--- a/window/MateWin.ui
+++ b/window/MateWin.ui
@@ -114,7 +114,7 @@ border-radius:30px
 }</string>
             </property>
             <property name="currentIndex">
-             <number>0</number>
+             <number>4</number>
             </property>
             <widget class="QWidget" name="page">
              <property name="styleSheet">
@@ -369,6 +369,36 @@ QWidget {background-color: }</string>
               </property>
              </widget>
             </widget>
+            <widget class="QWidget" name="page_4">
+             <widget class="QLabel" name="label_5">
+              <property name="geometry">
+               <rect>
+                <x>540</x>
+                <y>380</y>
+                <width>53</width>
+                <height>15</height>
+               </rect>
+              </property>
+              <property name="text">
+               <string>博客</string>
+              </property>
+             </widget>
+            </widget>
+            <widget class="QWidget" name="page_5">
+             <widget class="QLabel" name="label_6">
+              <property name="geometry">
+               <rect>
+                <x>240</x>
+                <y>420</y>
+                <width>53</width>
+                <height>15</height>
+               </rect>
+              </property>
+              <property name="text">
+               <string>其他</string>
+              </property>
+             </widget>
+            </widget>
            </widget>
           </item>
          </layout>
@@ -428,7 +458,7 @@ border-radius:20px
            </spacer>
           </item>
           <item>
-           <widget class="QListWidget" name="listWidget">
+           <widget class="QListWidget" name="l_fuction">
             <property name="styleSheet">
              <string notr="true">QListView {
 	border:none;
